@@ -35,6 +35,11 @@ Version 2.0-dev (CVS)
   passed in feature instead of through the return value of the method as
   was the case with the old SetFeature() method in MITAB 1.x.
 
+- Added support to handle duplicate field names (bug 2141)
+
+- Added validation to check if a field name start with a number, which is 
+  an invalid according to MapInfo (bug 2141)
+
 - Added functions to get the file version (API and C API) (bug 1961)
 
 - Fixed Overflow of FIDs in Seamless tables (bug 2015)
@@ -963,5 +968,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.236 2009-10-15 16:16:37 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.237 2010-01-07 20:39:11 aboudreault Exp $
 ------------
